src/objects/cspmb__Price_Item__c.object
<CustomObject>
    <description>Describes the pricing and commercial aspects of any product, service, tariff, price plan etc. which can be sold.</description>
    <fields>
        <fullName>LG_Active_Formula__c</fullName>
        <formula>IF( cspmb__Is_Active__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AvailableForSalesChannels__c</fullName>
        <label>Available For Sales Channels__c</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telesales Inbound</fullName>
                </value>
                <value>
                    <fullName>Telesales Outbound</fullName>
                </value>
                <value>
                    <fullName>Door-to-door</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Shops</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_DecompositionCriteria__c</fullName>
        <description>Used as a criteria for grouping the services to the suborders</description>
        <label>Decomposition Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_DecompositionCriteria</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount</label>
        <referenceTo>LG_Discount__c</referenceTo>
        <relationshipLabel>Price Items</relationshipLabel>
        <relationshipName>Price_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_DownloadSpeed__c</fullName>
        <label>Download Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_ExternalPriceName__c</fullName>
        <label>External Price Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ExternalServiceName__c</fullName>
        <label>External Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SoHo</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Additional Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_NumberOfIPAddresses__c</fullName>
        <label>Number of IP addresses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_ProductFamily__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>HPBX</fullName>
                </value>
                <value>
                    <fullName>PIN</fullName>
                </value>
                <value>
                    <fullName>DTV</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Connection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ProductTechnicalDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Technical Details</label>
        <referenceTo>LG_ProductTechnicalDetails__c</referenceTo>
        <relationshipLabel>Price Items</relationshipLabel>
        <relationshipName>Price_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_UploadSpeed__c</fullName>
        <label>Upload Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provisioning_ID__c</fullName>
        <label>Provisioning ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_System__c</fullName>
        <description>Hold the provisioning system value for the product</description>
        <label>Provisioning System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BillingProductId__c</fullName>
        <label>Billing Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>UM_Cancellation__c</fullName>
        <label>Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                </valueSetDefinition>
        </valueSet>
    </fields>
    
    <fields>
        <fullName>UM_Create_Additional_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is currently used by VW data processing. If checked, system will create additional Service Line Item on Service</description>
        <label>Create Additional Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_DoNotDecompose__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if a record needs to decomposed to subscriptions and services</description>
        <label>Do Not Decompose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_DownloadLimit__c</fullName>
        <label>Download Limit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1GB/Monat</fullName>
                </value>
                <value>
                    <fullName>5GB/Monat</fullName>
                </value>
                <value>
                    <fullName>500MB/Tag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Gateway__c</fullName>
        <label>Gateway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_GuidingProductCode__c</fullName>
        <label>Guiding Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_JiraIssueTypeId__c</fullName>
        <label>JiraIssueTypeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_MaximalAmountOfNumbers__c</fullName>
        <label>Maximal Amount Of Numbers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_NumberOfChannels__c</fullName>
        <label>Number Of Channels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_OTCCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked means only one time code is present for item and create recurring service line item.</description>
        <label>Only OTC Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_OneOffContractID__c</fullName>
        <label>One Off Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_RecurringCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if this is selected means only recurring code is present and create one time service line item.</description>
        <label>Only Recurring Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_RecurringContractID__c</fullName>
        <label>Recurring Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ShippingCost__c</fullName>
        <label>Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_StandardAmountOfNumbers__c</fullName>
        <label>Standard Amount Of Numbers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_TerminationCode__c</fullName>
        <label>Termination Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_UnitType__c</fullName>
        <label>Unit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_VariablePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be used to decide if the Price item is of type variable price. If variable price, the price will be decided and entered by the user (handled at Product Configuration level)</description>
        <label>Variable Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_VoiceworksMoreServices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked and quantity is more than 1 in VW staging record, then create service equivalent to quantity</description>
        <label>Voiceworks More Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_NumberOfUnitsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Number Of Units Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_VoiceworksOneOffChargeID__c</fullName>
        <label>Voiceworks One Off Charge ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_VoiceworksProductID__c</fullName>
        <label>Voiceworks Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_VoiceworksRecurringChargeID__c</fullName>
        <label>Voiceworks Recurring Charge ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account for which this Price Item is available. If blank, the Price Item is available to all Accounts. If set, the Price Item should only be used for the linked Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Items</relationshipLabel>
        <relationshipName>Price_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Apply_One_Off_Charge_Account_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Discount Level associated via the linked Account should be applied to the One-Off Charge of this Price Item.</description>
        <label>Apply One-Off Charge Account Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Apply_Recurring_Charge_Account_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Discount Level associated via the linked Account should be applied to the Recurring Charge of this Price Item.</description>
        <label>Apply Recurring Charge Account Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Authorization_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Authorization Level to be applied to this Price Item. If there is no Discount Threshold linked to the Authorization Level, then the Authorization Level should always be applied for this Price Item. Otherwise, the Authorization Level applies only if the sales price exceeds the specified Discount Threshold compared with the price of this Price Item.</description>
        <label>Authorization Level</label>
        <referenceTo>cspmb__Authorization_Level__c</referenceTo>
        <relationshipLabel>Price Items</relationshipLabel>
        <relationshipName>Price_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Billing_Frequency__c</fullName>
        <description>The billing frequency which applies to this Price Item.</description>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Contract_Term__c</fullName>
        <description>The contract term which applies to this Price Item.</description>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>24 Months</fullName>
                </value>
                <value>
                    <fullName>36 Months</fullName>
                </value>
                <value>
                    <fullName>48 Months</fullName>
                </value>
                <value>
                    <fullName>60 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Currency_Code__c</fullName>
        <description>Specifies the currency of this Price Item as an ISO currency code.</description>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Discount_Type__c</fullName>
        <description>The type of discount (an amount or a percentage).</description>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Negative Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Effective_End_Date__c</fullName>
        <description>The date after which this Price Item ceases to be effective.</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cspmb__Effective_Start_Date__c</fullName>
        <description>The date from which this Price Item is effective.</description>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If unchecked, this Price Item is not in effect (overrides start/end dates).</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Authorization_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A convenience flag which if checked implies that the linked Authorisation Level should always be applied, in which case it is assumed that there is no Discount Threshold associated with the Authorisation Level.</description>
        <label>Is Authorization Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_One_Off_Discount_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a lower sales one-off price can be offered than the one-off price of this Price Item. If an Authorisation Level is associated, approval may be required subject to a linked Discount Threshold.</description>
        <label>Is One-Off Discount Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Recurring_Discount_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a lower sales recurring price can be offered than the recurring price of this Price Item. If an Authorisation Level is associated, approval may be required subject to a linked Discount Threshold.</description>
        <label>Is Recurring Discount Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Charge_Code__c</fullName>
        <description>A code representing the one-off charge for this Price Item. Typically used to pass through to billing and finance systems.</description>
        <label>One-Off Charge Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Charge_External_Id__c</fullName>
        <description>An external identifier for the one-off charge for this Price Item. Typically used for integration with external finance and billing systems.</description>
        <externalId>true</externalId>
        <label>One-Off Charge External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Charge__c</fullName>
        <description>The one-off amount to be charged for this Price Item. E.g. an installation charge.</description>
        <label>One-Off Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Cost__c</fullName>
        <description>The one-off (i.e. not recurring) cost associated with this Price Item. Typically used to provide margin calculation.</description>
        <label>One-Off Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__Price_Item_Code__c</fullName>
        <description>A code identifying this Price Item.</description>
        <label>Price Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Price_Item_Description__c</fullName>
        <description>A free text description of this Price Item.</description>
        <label>Price Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Product_Definition_Name__c</fullName>
        <description>If set, the name of the Product Definition with which this price item should be used.</description>
        <label>Product Definition Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Product</fullName>
                </value>
                <value>
                    <fullName>Digitales Schwarzes Brett</fullName>
                </value>
                <value>
                    <fullName>PowerSpot II</fullName>
                </value>
                <value>
                    <fullName>Managed Wlan Solution</fullName>
                </value>
                <value>
                    <fullName>BDS Standort</fullName>
                </value>
                <value>
                    <fullName>Servicepakete</fullName>
                </value>
                <value>
                    <fullName>Company VPN Verbindung</fullName>
                </value>
                <value>
                    <fullName>Business Anywhere</fullName>
                </value>
                <value>
                    <fullName>CCF15-15</fullName>
                </value>
                <value>
                    <fullName>CCF25-25</fullName>
                </value>
                <value>
                    <fullName>CCF35-35</fullName>
                </value>
                <value>
                    <fullName>CCF50-50</fullName>
                </value>
                <value>
                    <fullName>CCF100-100</fullName>
                </value>
                <value>
                    <fullName>CCF200-200</fullName>
                </value>
                <value>
                    <fullName>CCF300-300</fullName>
                </value>
                <value>
                    <fullName>CCF500-500</fullName>
                </value>
                <value>
                    <fullName>CCF750-750</fullName>
                </value>
                <value>
                    <fullName>CCF1000-1000</fullName>
                </value>
                <value>
                    <fullName>CCC200-15</fullName>
                </value>
                <value>
                    <fullName>CCC200-25</fullName>
                </value>
                <value>
                    <fullName>CCC400-15</fullName>
                </value>
                <value>
                    <fullName>CCC400-25</fullName>
                </value>
                <value>
                    <fullName>CCC400-40</fullName>
                </value>
                <value>
                    <fullName>VPN Services</fullName>
                </value>
                <value>
                    <fullName>Company Fiber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Charge_Code__c</fullName>
        <description>A code identifying the recurring charge for this Price Item. Typically sent on to billing and finance systems.</description>
        <label>Recurring Charge Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Charge_External_Id__c</fullName>
        <description>An external identifier for the recurring charge of this Price Item. Typically used for integration to billing and finance systems.</description>
        <externalId>true</externalId>
        <label>Recurring Charge External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Charge__c</fullName>
        <description>The recurring (e.g. monthly) amount that should be charged for this Price Item.</description>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Cost__c</fullName>
        <description>The recurring (e.g. monthly) cost for this Price Item. Typically used to enable margin calculation.</description>
        <label>Recurring Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields> 
    <label>Price Item</label>
    <listViews>
        <fullName>WLAN</fullName>
        <columns>NAME</columns>
        <columns>UM_Gateway__c</columns>
        <columns>LG_DecompositionCriteria__c</columns>
        <columns>cspmb__Is_Active__c</columns>
        <columns>UM_NumberOfChannels__c</columns>
        <columns>cspmb__Recurring_Charge__c</columns>
        <columns>cspmb__One_Off_Charge__c</columns>
        <columns>cspmb__Contract_Term__c</columns>
        <columns>cspmb__Product_Definition_Name__c</columns>
        <columns>LG_MarketSegment__c</columns>
        <columns>LG_ProductTechnicalDetails__c</columns>
        <columns>LG_DownloadSpeed__c</columns>
        <columns>UM_GuidingProductCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_ProductTechnicalDetails__c</field>
            <operation>equals</operation>
            <value>WLAN</value>
        </filters>
        <label>WLAN</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>cspmb__All</fullName>
        <columns>NAME</columns>
        <columns>cspmb__Price_Item_Description__c</columns>
        <columns>UM_VoiceworksMoreServices__c</columns>
        <columns>UM_DoNotDecompose__c</columns>
        <columns>UM_RecurringContractID__c</columns>
        <columns>Provisioning_ID__c</columns>
        <columns>LG_DecompositionCriteria__c</columns>
        <columns>Provisioning_System__c</columns>
        <columns>LG_ProductTechnicalDetails__c</columns>
        <columns>UM_OneOffContractID__c</columns>
        <columns>UM_TerminationCode__c</columns>
        <columns>cspmb__Recurring_Charge__c</columns>
        <columns>cspmb__One_Off_Charge__c</columns>
        <columns>cspmb__Product_Definition_Name__c</columns>
        <columns>LG_MarketSegment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Price Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>